--- a/.github/workflows/makeDataMart.yml
+++ b/.github/workflows/makeDataMart.yml
@@ -8,7 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo $GCP_PROJECT
       
-    
+#      - name: Set up Cloud SDK
+#        uses: google-github-actions/setup-gcloud@master
+#        with:
+#          project_id: $GCP_PROJECT
+#          service_account_key: ${{ secrets.GCP_SA_KEY }}
+#          export_default_credentials: true
