--- a/.github/workflows/makeDataMart.yml
+++ b/.github/workflows/makeDataMart.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script
-        run: echo $GCP_PROJECT
+        run: echo ${{ secrets.GCP_PROJECT }}
       
 #      - name: Set up Cloud SDK
 #        uses: google-github-actions/setup-gcloud@master
