--- a/.github/workflows/makeDataMart.yml
+++ b/.github/workflows/makeDataMart.yml
@@ -9,12 +9,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script
-        run: echo ${{ secrets.GCP_PROJECT }}
+      - name: hellow, world
+        run: echo hello, world!
       
-#      - name: Set up Cloud SDK
-#        uses: google-github-actions/setup-gcloud@master
-#        with:
-#          project_id: $GCP_PROJECT
-#          service_account_key: ${{ secrets.GCP_SA_KEY }}
-#          export_default_credentials: true
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Make datasets
+        run: bq --location=us mk --force --dataset test_dataset
