--- a/.github/workflows/makeDataMart.yml
+++ b/.github/workflows/makeDataMart.yml
@@ -33,6 +33,8 @@ jobs:
                 table_name=$(echo $view_name | sed 's/table_//g')
                 bq query --replace --use_legacy_sql=false --destination_table ${dataset_name}.${table_name} < $f
               else
+                echo ${dataset_name}
+                echo ${view_name}
                 bq mk --force --use_legacy_sql=false --view "`cat $f`" ${dataset_name}.${view_name}
             fi
           done
