--- a/.github/workflows/makeDataMart.yml
+++ b/.github/workflows/makeDataMart.yml
@@ -33,6 +33,6 @@ jobs:
                 table_name=$(echo $view_name | sed 's/table_//g')
                 bq query --replace --use_legacy_sql=false --destination_table ${dataset_name}.${table_name} < $f
               else
-                bq mk --use_legacy_sql=false --view 'select event_name from `valid-progress-257914.analytics_254523623.events_20211105`' test_dataset.test_view
+                bq mk --use_legacy_sql=false --view 'select event_name from `valid-progress-257914.analytics_254523623.events_20211105`' analytics_254523623.test_view
             fi
           done
