--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   lint-models:
-    runs-on: ubuntu-latest
+    runs-on: linux-latest
     steps:
       - uses: "actions/checkout@v2"
       - uses: "actions/setup-python@v2"
